#1184 Flexible gap fill spaces on gap fill page (drag & drop type) - New gap width properties that allow you to choose from longest text, correct answer, compressed or bespoke (where you can set no. pixels) - New gap appearance properties that allow you to customise the appearance of droppable areas (background colour, outline, underline)

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/responsivetext.scss
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/responsivetext.scss
@@ -117,8 +117,7 @@ input#x_pagePswd {
 }
 #targetHolder .target {
     font-size: $pagecontentsmedium;
-    //*remove padding in gap fill targets*/
-    padding: 0.6vmin !important;
+    /*padding: 0.6vmin !important;*/
 }
 #targetHolder p {
     font-size: $pagecontentsmedium;
